Refactor to flask socket.io

--- a/chrome-extension/index.html
+++ b/chrome-extension/index.html
@@ -8,6 +8,7 @@
   <button id="clear">clear</button>
   <div id='log'>
   </div>
+  <script src="socket.io.min.js"></script>
   <script src="handle.js"></script>
 </body>
 </html>
